--- a/styles.css
+++ b/styles.css
@@ -304,9 +304,392 @@ html {
 }
 
 .skills .fila .col h3 {
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     font-family: Righteous;
     margin-bottom: 1.5rem;
 }
+
+.skills .skill > span {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 0.625rem;
+}
+
+.skills .skill .barra-skill{
+    height: 0.5rem;
+    width: 80%;
+    background-color: #131517;
+    position: relative;
+    margin-bottom: 1.8rem;
+}
+
+.skills .skill .progreso{
+    background-color: #1CB698;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 0.5rem;
+}
+
+.skills .skill .barra-skill span {
+    position: absolute;
+    height: 2.5rem;
+    width: 5rem;
+    background-color: #1CB698;
+    border-radius: 3.125rem;
+    line-height: 2.5rem;
+    text-align: center;
+    top: -1rem;
+    right: -1rem;
+    font-size: 0.875rem;
+}
+
+.skills .skill .javascript {
+    width: 0%;
+    animation: 2s javascript forwards;
+
+}
+
+@keyframes javascript {
+    0%{width: 0%;}
+    100%{width: 85%;}
+}
+
+.skills .skill .javascript {
+    width: 0%;
+    animation: 2s javascript forwards;
+
+}
+
+
+.skills .skill .htmlcss {
+    width: 0%;
+    animation: 2s htmlcss forwards;
+    
+}
+@keyframes htmlcss {
+    0%{width: 0%;}
+    100%{width: 100%;}
+}
+
+
+.skills .skill .react {
+    width: 0%;
+    animation: 2s react forwards;
+    
+}
+@keyframes react {
+    0%{width: 0%;}
+    100%{width: 85%;}
+}
+
+
+.skills .skill .nodejs {
+    width: 0%;
+    animation: 2s nodejs forwards;
+    
+}
+@keyframes nodejs {
+    0%{width: 0%;}
+    100%{width: 85%;}
+}
+
+
+
+.skills .skill .mongodb {
+    width: 0%;
+    animation: 2s mongodb forwards;
+
+}
+
+@keyframes mongodb {
+    0%{width: 0%;}
+    100%{width: 70%;}
+}
+
+
+
+.skills .skill .docker {
+    width: 0%;
+    animation: 2s docker forwards;
+
+}
+
+@keyframes docker {
+    0%{width: 0%;}
+    100%{width: 80%;}
+}
+
+.skills .skill .comunicacion {
+    width: 0%;
+    animation: 2s comunicacion forwards;
+
+}
+
+@keyframes comunicacion {
+    0%{width: 0%;}
+    100%{width: 100%;}
+}
+
+.skills .skill .proactividad {
+    width: 0%;
+    animation: 2s proactividad forwards;
+
+}
+
+@keyframes proactividad {
+    0%{width: 0%;}
+    100%{width: 100%;}
+}
+
+.skills .skill .creattividad {
+    width: 0%;
+    animation: 2s creatividad forwards;
+
+}
+
+@keyframes creatividad {
+    0%{width: 0%;}
+    100%{width: 100%;}
+}
+
+.skills .skill .dedicacion {
+    width: 0%;
+    animation: 2s dedicacion forwards;
+
+}
+
+@keyframes dedicacion {
+    0%{width: 0%;}
+    100%{width: 100%;}
+}
+
+.skills .skill .trabajoenequipo {
+    width: 0%;
+    animation: 2s trabajoenequipo forwards;
+
+}
+
+@keyframes trabajoenequipo {
+    0%{width: 0%;}
+    100%{width: 100%;}
+}
+
+.skills .skill .adaptabilidad {
+    width: 0%;
+    animation: 2s adaptabilidad forwards;
+
+}
+
+@keyframes adaptabilidad {
+    0%{width: 0%;}
+    100%{width: 100%;}
+}
+
+
+/* CURRÍCULUM */
+
+
+.curriculum {
+    background-color: #1e2326;
+    color: #fff;
+    padding: 3rem 1.25rem;
+}
+
+.curriculum .contenido-seccion {
+    max-width: 68rem;
+    margin: auto;
+    text-align: center;
+}
+
+.curriculum h2 {
+    font-size: 3rem;
+    font-family: Righteous;
+    text-align: center;
+    padding: 1.25rem 0;
+}
+
+.curriculum .fila {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+
+}
+
+.curriculum .fila .col {
+    width: 50%;
+    padding: 0 1.25rem;
+}
+
+.curriculum .fila .col h3 {
+    font-size: 1.5rem;
+    font-family: Righteous;
+    margin-bottom: 1.5rem;
+}
+
+.curriculum .fila .izquierda {
+    border-right: 2px solid #252A2E;
+
+}
+
+.curriculum .fila .derecha {
+    border-left: 2px solid #252A2E;
+    
+}
+
+.curriculum .fila .item {
+    padding: 1.5rem;
+    margin-bottom: 1.8rem;
+    background-color: #252A2E;
+    position: relative;
+}
+
+.curriculum .fila .item h4 {
+    font-size: 1.25rem;
+    margin-bottom: 0.6rem;
+}
+
+.curriculum .fila .item .casa {
+    color: #1CB698;
+    font-size: 1.3rem;
+    font-weight: bold;
+    display: block;
+}
+
+.curriculum .fila .item .fecha {
+    display: block;
+    color: #1CB698;
+    margin-bottom: 0.6rem;
+}
+
+.curriculum .fila .item p {
+    line-height: 1.5rem;
+}
+
+.curriculum .fila .izq {
+    border-right: 2px solid #1CB698;
+    margin-right: 1.25rem;
+}
+
+.curriculum .fila .der {
+    border-left: 2px solid #1CB698;
+    margin-left: 1.25rem;
+}
+
+.curriculum .fila .item .conectori {
+    height: 2px;
+    background-color: #1CB698;
+    width: 3rem;
+    position: absolute;
+    top: 50%;
+    right: -3rem;
+    z-index: 5;
+}
+
+.curriculum .fila .item .conectori .circuloi {
+    display: block;
+    height:0.625rem;
+    width:0.625rem;
+    border-radius: 50%;
+    background-color: #1CB698;
+    float: right;
+    position: relative;
+    bottom: 0.25rem;
+}
+
+.curriculum .fila .item .conectord {
+    height: 2px;
+    background-color: #1CB698;
+    width: 3rem;
+    position: absolute;
+    top: 50%;
+    left: -3rem;
+    z-index: 5;
+}
+
+.curriculum .fila .item .conectord .circulod {
+    display: block;
+    height:0.625rem;
+    width:0.625rem;
+    border-radius: 50%;
+    background-color: #1CB698;
+    float: left;
+    position: relative;
+    bottom: 0.25rem;
+}
+
+/* PORTFOLIO */
+
+.portfolio {
+    background-color: #1e2326;
+    color: #fff;
+    padding: 3rem 1.25rem;
+}
+
+.portfolio .contenido-seccion {
+    max-width: 68rem;
+    margin: auto;
+    text-align: center;
+}
+
+.portfolio h2 {
+    font-size: 3rem;
+    font-family: Righteous;
+    text-align: center;
+    padding: 1.25rem 0;
+}
+
+.portfolio .galeria {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.portfolio .galeria .proyecto {
+    position: relative;
+    max-width: 21.25rem;
+    height: fit-content;
+    margin: 0.625rem;
+    cursor: pointer;
+}
+
+.portfolio .galeria .proyecto img {
+    width: 100%;
+    display: block;
+}
+
+.portfolio .galeria .proyecto .overlay {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background: linear-gradient(rgba(28,182,152,.8), rgba(28,182,152,.8));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: 1s;
+    font-size: 1.125rem;
+    letter-spacing: 3px;
+    opacity: 0;
+    
+}
+
+.portfolio .galeria .proyecto .overlay h3 {
+    margin-bottom: 1.25rem;
+    transition: 1s;
+
+}
+
+.portfolio .galeria .proyecto .overlay:hover {
+    opacity: 1;
+}
+
+.portfolio .galeria .proyecto .overlay:hover h3 {
+    margin-bottom: 0px;
+}
+
+
+
 
 
