width del header mf hecho

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ html {
 }
 
 .contenedor-header header {
-    width: auto;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     gap: 3rem;
